[gd_scene load_steps=4 format=3 uid="uid://cei50bin7dbae"]

[ext_resource type="Script" uid="uid://c0jc5kufqpm86" path="res://Scripts/options_menu.gd" id="1_options_script"]
[ext_resource type="FontFile" uid="uid://dalj3asj0d324" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_font"]
[ext_resource type="FontFile" uid="uid://0fn4even71bp" path="res://Assets/fonts/PixelOperator8.ttf" id="3_font_normal"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_options_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioSection" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="MenuContainer/AudioSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "AUDIO"

[node name="MasterVolumeContainer" type="HBoxContainer" parent="MenuContainer/AudioSection"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="MenuContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 16
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="MenuContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="MasterVolumeValue" type="Label" parent="MenuContainer/AudioSection/MasterVolumeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 14
text = "100%"

[node name="MusicVolumeContainer" type="HBoxContainer" parent="MenuContainer/AudioSection"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="MenuContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 16
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="MenuContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="MusicVolumeValue" type="Label" parent="MenuContainer/AudioSection/MusicVolumeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 14
text = "100%"

[node name="SFXVolumeContainer" type="HBoxContainer" parent="MenuContainer/AudioSection"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="MenuContainer/AudioSection/SFXVolumeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 16
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="MenuContainer/AudioSection/SFXVolumeContainer"]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="SFXVolumeValue" type="Label" parent="MenuContainer/AudioSection/SFXVolumeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 14
text = "100%"

[node name="GraphicsSection" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="GraphicsLabel" type="Label" parent="MenuContainer/GraphicsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "GRAPHICS"

[node name="FullscreenContainer" type="HBoxContainer" parent="MenuContainer/GraphicsSection"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="MenuContainer/GraphicsSection/FullscreenContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 16
text = "Fullscreen:"

[node name="FullscreenCheckBox" type="CheckBox" parent="MenuContainer/GraphicsSection/FullscreenContainer"]
layout_mode = 2

[node name="ControlsSection" type="VBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="MenuContainer/ControlsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "CONTROLS"

[node name="ControlsText" type="RichTextLabel" parent="MenuContainer/ControlsSection"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "[color=white]Movement:[/color] A/D or Arrow Keys
[color=white]Jump:[/color] W, Space, or Up Arrow
[color=white]Dash:[/color] Shift
[color=white]Attack:[/color] Z
[color=white]Pause:[/color] Escape"
fit_content = true

[node name="ButtonContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 18
text = "Back"

[node name="ResetButton" type="Button" parent="MenuContainer/ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font_normal")
theme_override_font_sizes/font_size = 18
text = "Reset to Defaults"
